[tool.poetry]
name = "spotify-spatial"
version = "0.1.0"
description = ""
authors = ["Lewe Ohlsen <mail@lewe.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
jupyter = "^1.0.0"
spotipy = "^2.23.0"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
spacy = "^3.7.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
